<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".SegundaActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/calculadora" />

    <TextView
        android:id="@+id/txtSegundaActivityConversor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/conversor"
        android:textColor="@color/purple_500"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/edtTxtSegundaActivityMonto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/monto"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSegundaActivityConversor" />

    <TextView
        android:id="@+id/txtSegundaActivityMoneda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/moneda"
        android:textColor="@color/pink2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtSegundaActivityMonto" />

    <RadioGroup
        android:id="@+id/radGrpSegundaActivityMonedas"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/edtTxtSegundaActivityResultado"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radBtnSegundaActivityDolar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pink2"
            android:text="@string/dolar"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radBtnSegundaActivityEuro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pink2"
            android:text="@string/euro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="-10dp" />

        <RadioButton
            android:id="@+id/radBtnSegundaActivityReal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/pink2"
            android:text="@string/real"
            android:textSize="20sp"
            android:textStyle="bold"
            android:translationY="-20dp" />
    </RadioGroup>

    <EditText
        android:id="@+id/edtTxtSegundaActivityResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/resultado"
        android:inputType="number|numberDecimal"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/btnSegundaActivityConvertir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSegundaActivityConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/convertir"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSegundaActivityReiniciar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reiniciar"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>